<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2017 CNES - CENTRE NATIONAL d'ETUDES SPATIALES
 
 This file is part of REGARDS.
 
 REGARDS is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 REGARDS is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with REGARDS. If not, see <http://www.gnu.org/licenses/>.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.cnes.regards.modules</groupId>
	<artifactId>entities</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>Entities</name>
	<description>Module managing the entities, that is to say the representation of data in the system</description>
	<url>https://github.com/RegardsOss/RegardsOss.github.io</url>
	<inceptionYear>2016</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License (GNU GPL)</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>CNES</name>
		<url>https://cnes.fr/fr</url>
	</organization>
	<developers>
		<developer>
			<name>REGARDS Team</name>
			<organization>CS Systèmes d'Information</organization>
			<organizationUrl>http://www.c-s.fr</organizationUrl>
		</developer>
	</developers>

	<parent>
		<groupId>fr.cnes.regards</groupId>
		<artifactId>regards-parent</artifactId>
		<version>2.0.1-SNAPSHOT</version>
		<relativePath/>
	</parent>

	<modules>
		<module>entities-domain</module>
		<module>entities-dao</module>
		<module>entities-service</module>
		<module>entities-rest</module>
		<module>entities-client</module>
		<module>entities-plugin</module>
		<module>entities-gson</module>
		<module>entities-service-contract</module>
	</modules>

	<dependencyManagement>
		<dependencies>
		<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-plugin</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-service-contract</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-dao</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-rest</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.cnes.regards.modules.entities</groupId>
				<artifactId>entities-client</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
